syntax = "proto2";


// serial name 'org.dotlin.compiler.dart.element.DartPackageElement'
message DartPackageElement {
  // WARNING: a default value decoded when value is missing
  repeated DartLibraryElement libraries = 1;
}

// serial name 'org.dotlin.compiler.dart.element.DartLibraryElement'
message DartLibraryElement {
  required string location = 1;
  required string path = 2;
  // WARNING: a default value decoded when value is missing
  repeated DartLibraryExportElement exports = 3;
  // WARNING: a default value decoded when value is missing
  repeated DartCompilationUnitElement units = 4;
}

// serial name 'org.dotlin.compiler.dart.element.DartCompilationUnitElement'
message DartCompilationUnitElement {
  required string location = 1;
  // WARNING: a default value decoded when value is missing
  repeated DartPropertyElement properties = 2;
  // WARNING: a default value decoded when value is missing
  repeated DartClassElement classes = 3;
  // WARNING: a default value decoded when value is missing
  repeated DartFunctionElement functions = 4;
}

// serial name 'org.dotlin.compiler.dart.element.DartClassElement'
message DartClassElement {
  required string location = 1;
  required string name = 2;
  repeated DartTypeParameterElement typeParameters = 3;
  required bool isAbstract = 4;
  repeated DartConstructorElement constructors = 5;
  // WARNING: a default value decoded when value is missing
  repeated DartPropertyElement properties = 6;
}

// serial name 'org.dotlin.compiler.dart.element.DartPropertyElement'
message DartPropertyElement {
  required string location = 1;
  required string name = 2;
  required bool isAbstract = 3;
  required bool isCovariant = 4;
  required bool isConst = 5;
  required bool isFinal = 6;
  required bool isLate = 7;
  required bool isStatic = 8;
  required bool isSynthetic = 9;
  required DartType type = 10;
  optional DartPropertyAccessorElement getter = 11;
  optional DartPropertyAccessorElement setter = 12;
}

// serial name 'org.dotlin.compiler.dart.element.DartPropertyAccessorElement'
message DartPropertyAccessorElement {
  required string location = 1;
  required string name = 2;
  required DartFunctionType type = 3;
  required bool isAsync = 4;
  required bool isGenerator = 5;
  required bool isSynthetic = 6;
  repeated DartParameterElement parameters = 7;
  repeated DartTypeParameterElement typeParameters = 8;
  required string correspondingPropertyLocation = 9;
}

// serial name 'org.dotlin.compiler.dart.element.DartFunctionElement'
message DartFunctionElement {
  required string location = 1;
  required string name = 2;
  required bool isAsync = 3;
  required bool isGenerator = 4;
  required bool isAbstract = 5;
  required bool isStatic = 6;
  required bool isOperator = 7;
  // WARNING: a default value decoded when value is missing
  repeated DartParameterElement parameters = 8;
  // WARNING: a default value decoded when value is missing
  repeated DartTypeParameterElement typeParameters = 9;
  required DartFunctionType type = 10;
}

// serial name 'org.dotlin.compiler.dart.element.DartConstructorElement'
message DartConstructorElement {
  required string location = 1;
  required string name = 2;
  required bool isConst = 3;
  required DartFunctionType type = 4;
  // WARNING: a default value decoded when value is missing
  repeated DartParameterElement parameters = 5;
}

// serial name 'org.dotlin.compiler.dart.element.DartParameterElement'
message DartParameterElement {
  required string location = 1;
  required string name = 2;
  required DartType type = 3;
  required bool isCovariant = 4;
  required bool isNamed = 5;
  required bool isRequired = 6;
  // WARNING: a default value decoded when value is missing
  optional string fieldLocation = 7;
  // WARNING: a default value decoded when value is missing
  optional string superConstructorParameterLocation = 8;
  // WARNING: a default value decoded when value is missing
  optional string defaultValueCode = 9;
}

// serial name 'org.dotlin.compiler.dart.element.DartType'
message DartType {
  required string type = 1;
  // decoded as message with one of these types:
  //   message DartDynamicType, serial name 'org.dotlin.compiler.dart.element.DartDynamicType'
  //   message DartFunctionType, serial name 'org.dotlin.compiler.dart.element.DartFunctionType'
  //   message DartNeverType, serial name 'org.dotlin.compiler.dart.element.DartNeverType'
  //   message DartInterfaceType, serial name 'org.dotlin.compiler.dart.element.DartInterfaceType'
  //   message DartTypeParameterType, serial name 'org.dotlin.compiler.dart.element.DartTypeParameterType'
  //   message DartVoidType, serial name 'org.dotlin.compiler.dart.element.DartVoidType'
  required bytes value = 2;
}

// serial name 'org.dotlin.compiler.dart.element.DartLibraryExportElement'
message DartLibraryExportElement {
  required string location = 1;
  required string exportLocation = 2;
  // WARNING: a default value decoded when value is missing
  repeated string show = 3;
  // WARNING: a default value decoded when value is missing
  repeated string hide = 4;
}

// serial name 'org.dotlin.compiler.dart.element.DartTypeParameterElement'
message DartTypeParameterElement {
  required string name = 1;
  required string location = 2;
  // WARNING: a default value decoded when value is missing
  optional DartType bound = 3;
}

// serial name 'org.dotlin.compiler.dart.element.DartFunctionType'
message DartFunctionType {
  // WARNING: a default value decoded when value is missing
  repeated DartParameterElement parameters = 1;
  // WARNING: a default value decoded when value is missing
  repeated DartTypeParameterElement typeParameters = 2;
  required DartType returnType = 3;
  required DartNullabilitySuffix nullabilitySuffix = 4;
}

// serial name 'org.dotlin.compiler.dart.element.DartDynamicType'
message DartDynamicType {
}

// serial name 'org.dotlin.compiler.dart.element.DartNeverType'
message DartNeverType {
}

// serial name 'org.dotlin.compiler.dart.element.DartInterfaceType'
message DartInterfaceType {
  required string elementLocation = 1;
  // WARNING: a default value decoded when value is missing
  repeated DartType typeArguments = 2;
  optional DartInterfaceType superClass = 3;
  // WARNING: a default value decoded when value is missing
  repeated DartInterfaceType superInterfaceTypes = 4;
  // WARNING: a default value decoded when value is missing
  repeated DartInterfaceType superMixinTypes = 5;
  required DartNullabilitySuffix nullabilitySuffix = 6;
}

// serial name 'org.dotlin.compiler.dart.element.DartTypeParameterType'
message DartTypeParameterType {
  required string elementLocation = 1;
  required DartType bound = 2;
  required DartNullabilitySuffix nullabilitySuffix = 3;
}

// serial name 'org.dotlin.compiler.dart.element.DartVoidType'
message DartVoidType {
}

// serial name 'org.dotlin.compiler.dart.element.DartNullabilitySuffix'
enum DartNullabilitySuffix {
  QUESTION_MARK = 0;
  STAR = 1;
  NONE = 2;
}
